// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Package.json exports support > should build app package for both web and native targets > native-optimized 1`] = `
"import {
  Adapt,
  Anchor,
  Button,
  type FontSizeTokens,
  getFontSize,
  H1,
  Label,
  Paragraph,
  Select,
  type SelectProps,
  Separator,
  Sheet,
  toast,
  XStack,
  YStack,
} from '@my/ui'
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton'
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton'
import { LinearGradient } from '@tamagui/linear-gradient'
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons-2'
import React, { useState } from 'react'
import { Platform } from 'react-native'
import { useLink } from 'solito/navigation'

export function SelectDemo() {
  return (
    <__TamaguiNativeView style={{"position":"relative","flexDirection":"column","rowGap":18,"columnGap":18}}>
      <__TamaguiNativeView style={{"position":"relative","flexDirection":"row","width":"100%","alignItems":"center","rowGap":18,"columnGap":18}}  >
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </__TamaguiNativeView>

      <__TamaguiNativeView style={{"position":"relative","flexDirection":"row","width":"100%","alignItems":"center","rowGap":18,"columnGap":18}}  >
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </__TamaguiNativeView>
    </__TamaguiNativeView>
  )
}

export function SelectDemoItem(props: SelectProps & { trigger?: React.ReactNode }) {
  const [val, setVal] = React.useState('apple')

  return (
    <Select
      value={val}
      onValueChange={setVal}
      disablePreventBodyScroll
      zIndex={200000}
      {...props}
    >
      {props?.trigger || (
        <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>
      )}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Container>
            <Sheet.Background />
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Container>
          <Sheet.Overlay
            backgroundColor="shadow-color"
            transition="lazy"
            opacity="enter:0 exit:0"
          />
        </Sheet>
      </Adapt>

      <Select.Content>
        <Select.ScrollUpButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <__TamaguiNativeView style={{"zIndex":10,"position":"relative","flexDirection":"column"}}>
            <ChevronUp size={20} />
          </__TamaguiNativeView>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['background', 'transparent']}
          />
        </Select.ScrollUpButton>

        <Select.Viewport
          // to do animations:
          // transition="quick"
          // animateOnly={['transform', 'opacity']}
          // opacity="enter:0 exit:0"
          // y="enter:-10px exit:10px"
          minW={200}
        >
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(
              () =>
                items.map((item, i) => {
                  return (
                    <Select.Item
                      index={i}
                      key={item.name}
                      value={item.name.toLowerCase()}
                    >
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>
                  )
                }),
              [items]
            )}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && (
            <__TamaguiNativeView
              style={{"right":0,"top":0,"bottom":0,"flexDirection":"column","position":"absolute","alignItems":"center","justifyContent":"center","width":44,"pointerEvents":"none"}}







            >
              <ChevronDown size={getFontSize((props.size as FontSizeTokens) ?? true)} />
            </__TamaguiNativeView>
          )}
        </Select.Viewport>

        <Select.ScrollDownButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <__TamaguiNativeView style={{"zIndex":10,"position":"relative","flexDirection":"column"}}>
            <ChevronDown size={20} />
          </__TamaguiNativeView>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['transparent', 'background']}
          />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>
  )
}

const items = [
  { name: 'Apple' },
  { name: 'Pear' },
  { name: 'Blackberry' },
  { name: 'Peach' },
  { name: 'Apricot' },
  { name: 'Melon' },
  { name: 'Honeydew' },
  { name: 'Starfruit' },
  { name: 'Blueberry' },
  { name: 'Raspberry' },
  { name: 'Strawberry' },
  { name: 'Mango' },
  { name: 'Pineapple' },
  { name: 'Lime' },
  { name: 'Lemon' },
  { name: 'Coconut' },
  { name: 'Guava' },
  { name: 'Papaya' },
  { name: 'Orange' },
  { name: 'Grape' },
  { name: 'Jackfruit' },
  { name: 'Durian' },
]

export function HomeScreen({ pagesMode = false }: { pagesMode?: boolean }) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user'
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`,
  })

  return (
    <__TamaguiNativeView style={{"flex":1,"position":"relative","flexDirection":"column","justifyContent":"center","alignItems":"center","rowGap":46,"columnGap":46,"paddingTop":18,"paddingRight":18,"paddingBottom":18,"paddingLeft":18,"backgroundColor":"hsla(0, 0%, 2%, 1)"}}     >
      <XStack
        position="absolute sm:relative"
        width="100%"
        t="6 sm:0px"
        gap="6"
        justify="center"
        flexWrap="wrap"
      >
        {Platform.OS === 'web' && (
          <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>
        )}
      </XStack>

      <SelectDemo />

      <__TamaguiNativeView style={{"position":"relative","flexDirection":"row","rowGap":7,"columnGap":7}}>
        <Button
          size="3"
          iconAfter={
            <Button.Icon>
              <Activity />
            </Button.Icon>
          }
        >
          <Button.Text>Inverse</Button.Text>
        </Button>
      </__TamaguiNativeView>
      <__TamaguiNativeView style={{"position":"relative","flexDirection":"column","rowGap":18,"columnGap":18}}>
        <__TamaguiNativeText style={{"letterSpacing":-3,"fontSize":46,"lineHeight":56,"marginTop":0,"marginRight":0,"marginBottom":0,"marginLeft":0,"textTransform":"none","fontFamily":"InterBold","textAlign":"center","color":"hsla(0, 0%, 100%, 1)"}} >
          Welcome to Tamagui.
        </__TamaguiNativeText>
        <__TamaguiNativeText style={{"letterSpacing":0,"fontSize":15,"lineHeight":27,"fontFamily":"Inter","color":"hsla(0, 0%, 38%, 1)","textAlign":"center"}} >
          Here's a basic starter to show navigating from one screen to another.
        </__TamaguiNativeText>
        <__TamaguiNativeView style={{"flexShrink":0,"borderTopWidth":0,"borderRightWidth":0,"borderBottomWidth":1,"borderLeftWidth":0,"flex":1,"height":0,"maxHeight":0,"borderTopColor":"background-focus","borderRightColor":"background-focus","borderBottomColor":"background-focus","borderLeftColor":"background-focus","transform":[{"translateY":-0.5}],"borderStyle":"solid"}} />
        <__TamaguiNativeText style={{"letterSpacing":0,"fontSize":15,"lineHeight":27,"fontFamily":"Inter","color":"hsla(0, 0%, 100%, 1)","textAlign":"center"}}>
          This screen uses the same code on Next.js and React Native.
        </__TamaguiNativeText>
        <__TamaguiNativeView style={{"flexShrink":0,"borderTopWidth":0,"borderRightWidth":0,"borderBottomWidth":1,"borderLeftWidth":0,"flex":1,"height":0,"maxHeight":0,"borderTopColor":"background-focus","borderRightColor":"background-focus","borderBottomColor":"background-focus","borderLeftColor":"background-focus","transform":[{"translateY":-0.5}],"borderStyle":"solid"}} />
      </__TamaguiNativeView>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </__TamaguiNativeView>
  )
}

function SheetDemo() {
  const [open, setOpen] = useState(false)
  const [position, setPosition] = useState(0)

  return (
    <>
      <Button
        size="6"
        icon={open ? ChevronDown : ChevronUp}
        circular
        onPress={() => setOpen((x) => !x)}
      />
      <Sheet
        modal
        transition="medium"
        open={open}
        onOpenChange={setOpen}
        snapPoints={[80]}
        position={position}
        onPositionChange={setPosition}
        dismissOnSnapToBottom
      >
        <Sheet.Overlay bg="shadow4" transition="lazy" opacity="enter:0 exit:0" />
        <Sheet.Handle bg="color8" />
        <Sheet.Container items="center" justify="center" gap="10">
          <Sheet.Background bg="color2" />
          <__TamaguiNativeView style={{"position":"relative","flexDirection":"row","rowGap":7,"columnGap":7}}>
            <__TamaguiNativeText style={{"letterSpacing":0,"fontSize":15,"lineHeight":27,"fontFamily":"Inter","color":"hsla(0, 0%, 100%, 1)","textAlign":"center"}}>Made by</__TamaguiNativeText>
            <Anchor color="blue10" href="https://twitter.com/natebirdman" target="_blank">
              @natebirdman,
            </Anchor>
            <Anchor
              color="blue10"
              href="https://github.com/tamagui/tamagui"
              target="_blank"
              rel="noreferrer"
            >
              give it a ⭐️
            </Anchor>
          </__TamaguiNativeView>

          <Button
            size="6"
            circular
            icon={ChevronDown}
            onPress={() => {
              setOpen(false)
              toast('Sheet closed!', {
                description: 'Just showing how toast works...',
              })
            }}
          />
        </Sheet.Container>
      </Sheet>
    </>
  )
}

const __TamaguiNativeView = require('react-native').View;
const __TamaguiNativeText = require('react-native').Text;"
`;

exports[`Package.json exports support > should build app package for both web and native targets > web-css 1`] = `"._p-1680456342{position:relative}._fd-993307987{flex-direction:column}._rg-2005477931{row-gap:var(--c-space-4)}._cg-1998450050{column-gap:var(--c-space-4)}._p-1680456342{position:relative}._fd-903929222{flex-direction:row}._w-2049337802{width:100%}._ai-984674592{align-items:center}._rg-2005477931{row-gap:var(--c-space-4)}._cg-1998450050{column-gap:var(--c-space-4)}._p-1680456342{position:relative}._fd-903929222{flex-direction:row}._w-2049337802{width:100%}._ai-984674592{align-items:center}._rg-2005477931{row-gap:var(--c-space-4)}._cg-1998450050{column-gap:var(--c-space-4)}._z-10{z-index:10;}._p-1680456342{position:relative}._fd-993307987{flex-direction:column}._r-0px{right:0px;}._t-0px{top:0px;}._b-0px{bottom:0px;}._fd-993307987{flex-direction:column}._p-602101781{position:absolute}._ai-984674592{align-items:center}._jc-1451134762{justify-content:center}._w-1658152644{width:var(--c-size-4)}._pe-2062402311{pointer-events:none}._z-10{z-index:10;}._p-1680456342{position:relative}._fd-993307987{flex-direction:column}._grow-1{flex-grow:1;}._shrink-1{flex-shrink:1;}._p-1680456342{position:relative}._fd-993307987{flex-direction:column}._fb-1179007698{flex-basis:auto}._jc-1451134762{justify-content:center}._ai-984674592{align-items:center}._rg-2005477807{row-gap:var(--c-space-8)}._cg-1998449926{column-gap:var(--c-space-8)}._pt-2030555998{padding-top:var(--c-space-4)}._pr-432028893{padding-right:var(--c-space-4)}._pb-650479431{padding-bottom:var(--c-space-4)}._pl-1712651667{padding-left:var(--c-space-4)}._bc-760290994{background-color:var(--background)}._fd-903929222{flex-direction:row}._p-2037968290{position:absolute}@media (min-width: 640px) {._p-2037968290{position:relative}}._w-2049337802{width:100%}._t-1090455351{top:var(--c-space-6)}@media (min-width: 640px) {._t-1090455351{top:0px}}._rg-2005477869{row-gap:var(--c-space-6)}._cg-1998449988{column-gap:var(--c-space-6)}._jc-1451134762{justify-content:center}._fw-1940163442{flex-wrap:wrap}._p-1680456342{position:relative}._fd-903929222{flex-direction:row}._rg-2005477993{row-gap:var(--c-space-2)}._cg-1998450112{column-gap:var(--c-space-2)}._p-1680456342{position:relative}._fd-993307987{flex-direction:column}._rg-2005477931{row-gap:var(--c-space-4)}._cg-1998450050{column-gap:var(--c-space-4)}._mt-0px{margin-top:0px;}._mr-0px{margin-right:0px;}._mb-0px{margin-bottom:0px;}._ml-0px{margin-left:0px;}._us-1779636624{user-select:auto}._ws-16207184{white-space:normal}._tt-1237313446{text-transform:var(--f-transform-10)}._ff-223068202{font-family:var(--f-family)}._fw-1587648533{font-weight:var(--f-weight-10)}._ls-212441533{letter-spacing:var(--f-letterSpacing-10)}._fs-1233374854{font-size:var(--f-size-10)}._lh-982341709{line-height:var(--f-lineHeight-10)}._ta-133869855{text-align:center}._c-1209323742{color:var(--color12)}._us-1779636624{user-select:auto}._ws-16207184{white-space:normal}._ff-223068202{font-family:var(--f-family)}._fw-1449875753{font-weight:var(--f-weight-4)}._ls-668569891{letter-spacing:var(--f-letterSpacing-4)}._fs-1595970648{font-size:var(--f-size-4)}._lh-386115147{line-height:var(--f-lineHeight-4)}._c-1209323680{color:var(--color10)}._ta-133869855{text-align:center}._shrink-1{flex-shrink:1;}._btw-0px._btw-0px{border-top-width:0px;}._brw-0px._brw-0px{border-right-width:0px;}._borderBottomWidth-1px._borderBottomWidth-1px{border-bottom-width:1px;}._borderLeftWidth-0px._borderLeftWidth-0px{border-left-width:0px;}._grow-1{flex-grow:1;}._height-0px{height:0px;}._maxH-0px{max-height:0px;}._bbs-solid._bbs-solid{border-bottom-style:solid;}._bts-solid._bts-solid{border-top-style:solid;}._bls-solid._bls-solid{border-left-style:solid;}._brs-solid._brs-solid{border-right-style:solid;}._fb-1179007698{flex-basis:auto}._ty-1987489944{--t-y:-0.5px}._t-1640849179{translate:var(--t-x, 0px) var(--t-y, 0px)}._btc-2003162210{border-top-color:background-focus}._brc-1597429945{border-right-color:background-focus}._bbc-1907786111{border-bottom-color:background-focus}._blc-848959775{border-left-color:background-focus}._us-1779636624{user-select:auto}._ws-16207184{white-space:normal}._ff-223068202{font-family:var(--f-family)}._fw-1449875753{font-weight:var(--f-weight-4)}._ls-668569891{letter-spacing:var(--f-letterSpacing-4)}._fs-1595970648{font-size:var(--f-size-4)}._lh-386115147{line-height:var(--f-lineHeight-4)}._c-2138458847{color:var(--color)}._ta-133869855{text-align:center}._shrink-1{flex-shrink:1;}._btw-0px._btw-0px{border-top-width:0px;}._brw-0px._brw-0px{border-right-width:0px;}._borderBottomWidth-1px._borderBottomWidth-1px{border-bottom-width:1px;}._borderLeftWidth-0px._borderLeftWidth-0px{border-left-width:0px;}._grow-1{flex-grow:1;}._height-0px{height:0px;}._maxH-0px{max-height:0px;}._bbs-solid._bbs-solid{border-bottom-style:solid;}._bts-solid._bts-solid{border-top-style:solid;}._bls-solid._bls-solid{border-left-style:solid;}._brs-solid._brs-solid{border-right-style:solid;}._fb-1179007698{flex-basis:auto}._ty-1987489944{--t-y:-0.5px}._t-1640849179{translate:var(--t-x, 0px) var(--t-y, 0px)}._btc-2003162210{border-top-color:background-focus}._brc-1597429945{border-right-color:background-focus}._bbc-1907786111{border-bottom-color:background-focus}._blc-848959775{border-left-color:background-focus}._p-1680456342{position:relative}._fd-903929222{flex-direction:row}._rg-2005477993{row-gap:var(--c-space-2)}._cg-1998450112{column-gap:var(--c-space-2)}._us-1779636624{user-select:auto}._ws-16207184{white-space:normal}._ff-223068202{font-family:var(--f-family)}._fw-1449875753{font-weight:var(--f-weight-4)}._ls-668569891{letter-spacing:var(--f-letterSpacing-4)}._fs-1595970648{font-size:var(--f-size-4)}._lh-386115147{line-height:var(--f-lineHeight-4)}._c-2138458847{color:var(--color)}._ta-133869855{text-align:center}"`;

exports[`Package.json exports support > should build app package for both web and native targets > web-optimized 1`] = `
"import "./_screen.css"
import {
  Adapt,
  Anchor,
  Button,
  type FontSizeTokens,
  getFontSize,
  H1,
  Label,
  Paragraph,
  Select,
  type SelectProps,
  Separator,
  Sheet,
  toast,
  XStack,
  YStack,
} from '@my/ui'
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton'
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton'
import { LinearGradient } from '@tamagui/linear-gradient'
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons-2'
import React, { useState } from 'react'
import { Platform } from 'react-native'
import { useLink } from 'solito/navigation'

export function SelectDemo() {
  return (
    <div className="is_View _p-1680456342 _fd-993307987 _rg-2005477931 _cg-1998450050">
      <div className="is_View _p-1680456342 _fd-903929222 _w-2049337802 _ai-984674592 _rg-2005477931 _cg-1998450050"  >
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </div>

      <div className="is_View _p-1680456342 _fd-903929222 _w-2049337802 _ai-984674592 _rg-2005477931 _cg-1998450050"  >
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </div>
    </div>
  )
}

export function SelectDemoItem(props: SelectProps & { trigger?: React.ReactNode }) {
  const [val, setVal] = React.useState('apple')

  return (
    <Select
      value={val}
      onValueChange={setVal}
      disablePreventBodyScroll
      zIndex={200000}
      {...props}
    >
      {props?.trigger || (
        <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>
      )}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Container>
            <Sheet.Background />
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Container>
          <Sheet.Overlay
            backgroundColor="shadow-color"
            transition="lazy"
            opacity="enter:0 exit:0"
          />
        </Sheet>
      </Adapt>

      <Select.Content>
        <Select.ScrollUpButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <div className="is_View _z-10 _p-1680456342 _fd-993307987">
            <ChevronUp size={20} />
          </div>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['background', 'transparent']}
          />
        </Select.ScrollUpButton>

        <Select.Viewport
          // to do animations:
          // transition="quick"
          // animateOnly={['transform', 'opacity']}
          // opacity="enter:0 exit:0"
          // y="enter:-10px exit:10px"
          minW={200}
        >
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(
              () =>
                items.map((item, i) => {
                  return (
                    <Select.Item
                      index={i}
                      key={item.name}
                      value={item.name.toLowerCase()}
                    >
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>
                  )
                }),
              [items]
            )}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && (
            <div
              className="is_View _r-0px _t-0px _b-0px _fd-993307987 _p-602101781 _ai-984674592 _jc-1451134762 _w-1658152644 _pe-2062402311"







            >
              <ChevronDown size={getFontSize((props.size as FontSizeTokens) ?? true)} />
            </div>
          )}
        </Select.Viewport>

        <Select.ScrollDownButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <div className="is_View _z-10 _p-1680456342 _fd-993307987">
            <ChevronDown size={20} />
          </div>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['transparent', 'background']}
          />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>
  )
}

const items = [
  { name: 'Apple' },
  { name: 'Pear' },
  { name: 'Blackberry' },
  { name: 'Peach' },
  { name: 'Apricot' },
  { name: 'Melon' },
  { name: 'Honeydew' },
  { name: 'Starfruit' },
  { name: 'Blueberry' },
  { name: 'Raspberry' },
  { name: 'Strawberry' },
  { name: 'Mango' },
  { name: 'Pineapple' },
  { name: 'Lime' },
  { name: 'Lemon' },
  { name: 'Coconut' },
  { name: 'Guava' },
  { name: 'Papaya' },
  { name: 'Orange' },
  { name: 'Grape' },
  { name: 'Jackfruit' },
  { name: 'Durian' },
]

export function HomeScreen({ pagesMode = false }: { pagesMode?: boolean }) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user'
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`,
  })

  return (
    <div className="is_View _grow-1 _shrink-1 _p-1680456342 _fd-993307987 _fb-1179007698 _jc-1451134762 _ai-984674592 _rg-2005477807 _cg-1998449926 _pt-2030555998 _pr-432028893 _pb-650479431 _pl-1712651667 _bc-760290994"     >
      <div
        className="is_View _fd-903929222 _p-2037968290 _w-2049337802 _t-1090455351 _rg-2005477869 _cg-1998449988 _jc-1451134762 _fw-1940163442"





      >
        {Platform.OS === 'web' && (
          <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>
        )}
      </div>

      <SelectDemo />

      <div className="is_View _p-1680456342 _fd-903929222 _rg-2005477993 _cg-1998450112">
        <Button
          size="3"
          iconAfter={
            <Button.Icon>
              <Activity />
            </Button.Icon>
          }
        >
          <Button.Text>Inverse</Button.Text>
        </Button>
      </div>
      <div className="is_View _p-1680456342 _fd-993307987 _rg-2005477931 _cg-1998450050">
        <h1 className="is_H1 is_Text font_heading _mt-0px _mr-0px _mb-0px _ml-0px _us-1779636624 _ws-16207184 _tt-1237313446 _ff-223068202 _fw-1587648533 _ls-212441533 _fs-1233374854 _lh-982341709 _ta-133869855 _c-1209323742" >
          Welcome to Tamagui.
        </h1>
        <p className="is_Paragraph is_Text font_body _us-1779636624 _ws-16207184 _ff-223068202 _fw-1449875753 _ls-668569891 _fs-1595970648 _lh-386115147 _c-1209323680 _ta-133869855" >
          Here's a basic starter to show navigating from one screen to another.
        </p>
        <div className="is_Separator is_View _shrink-1 _btw-0px _brw-0px _borderBottomWidth-1px _borderLeftWidth-0px _grow-1 _height-0px _maxH-0px _bbs-solid _bts-solid _bls-solid _brs-solid _fb-1179007698 _ty-1987489944 _t-1640849179 _btc-2003162210 _brc-1597429945 _bbc-1907786111 _blc-848959775" />
        <p className="is_Paragraph is_Text font_body _us-1779636624 _ws-16207184 _ff-223068202 _fw-1449875753 _ls-668569891 _fs-1595970648 _lh-386115147 _c-2138458847 _ta-133869855">
          This screen uses the same code on Next.js and React Native.
        </p>
        <div className="is_Separator is_View _shrink-1 _btw-0px _brw-0px _borderBottomWidth-1px _borderLeftWidth-0px _grow-1 _height-0px _maxH-0px _bbs-solid _bts-solid _bls-solid _brs-solid _fb-1179007698 _ty-1987489944 _t-1640849179 _btc-2003162210 _brc-1597429945 _bbc-1907786111 _blc-848959775" />
      </div>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </div>
  )
}

function SheetDemo() {
  const [open, setOpen] = useState(false)
  const [position, setPosition] = useState(0)

  return (
    <>
      <Button
        size="6"
        icon={open ? ChevronDown : ChevronUp}
        circular
        onPress={() => setOpen((x) => !x)}
      />
      <Sheet
        modal
        transition="medium"
        open={open}
        onOpenChange={setOpen}
        snapPoints={[80]}
        position={position}
        onPositionChange={setPosition}
        dismissOnSnapToBottom
      >
        <Sheet.Overlay bg="shadow4" transition="lazy" opacity="enter:0 exit:0" />
        <Sheet.Handle bg="color8" />
        <Sheet.Container items="center" justify="center" gap="10">
          <Sheet.Background bg="color2" />
          <div className="is_View _p-1680456342 _fd-903929222 _rg-2005477993 _cg-1998450112">
            <p className="is_Paragraph is_Text font_body _us-1779636624 _ws-16207184 _ff-223068202 _fw-1449875753 _ls-668569891 _fs-1595970648 _lh-386115147 _c-2138458847 _ta-133869855">Made by</p>
            <Anchor color="blue10" href="https://twitter.com/natebirdman" target="_blank">
              @natebirdman,
            </Anchor>
            <Anchor
              color="blue10"
              href="https://github.com/tamagui/tamagui"
              target="_blank"
              rel="noreferrer"
            >
              give it a ⭐️
            </Anchor>
          </div>

          <Button
            size="6"
            circular
            icon={ChevronDown}
            onPress={() => {
              setOpen(false)
              toast('Sheet closed!', {
                description: 'Just showing how toast works...',
              })
            }}
          />
        </Sheet.Container>
      </Sheet>
    </>
  )
}
"
`;

exports[`Package.json exports support > should recognize imports from path-specific exports during optimization > native-optimized-single 1`] = `
"import {
  Adapt,
  Anchor,
  Button,
  type FontSizeTokens,
  getFontSize,
  H1,
  Label,
  Paragraph,
  Select,
  type SelectProps,
  Separator,
  Sheet,
  toast,
  XStack,
  YStack,
} from '@my/ui'
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton'
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton'
import { LinearGradient } from '@tamagui/linear-gradient'
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons-2'
import React, { useState } from 'react'
import { Platform } from 'react-native'
import { useLink } from 'solito/navigation'

export function SelectDemo() {
  return (
    <__TamaguiNativeView style={{"position":"relative","flexDirection":"column","rowGap":18,"columnGap":18}}>
      <__TamaguiNativeView style={{"position":"relative","flexDirection":"row","width":"100%","alignItems":"center","rowGap":18,"columnGap":18}}  >
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </__TamaguiNativeView>

      <__TamaguiNativeView style={{"position":"relative","flexDirection":"row","width":"100%","alignItems":"center","rowGap":18,"columnGap":18}}  >
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </__TamaguiNativeView>
    </__TamaguiNativeView>
  )
}

export function SelectDemoItem(props: SelectProps & { trigger?: React.ReactNode }) {
  const [val, setVal] = React.useState('apple')

  return (
    <Select
      value={val}
      onValueChange={setVal}
      disablePreventBodyScroll
      zIndex={200000}
      {...props}
    >
      {props?.trigger || (
        <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>
      )}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Container>
            <Sheet.Background />
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Container>
          <Sheet.Overlay
            backgroundColor="shadow-color"
            transition="lazy"
            opacity="enter:0 exit:0"
          />
        </Sheet>
      </Adapt>

      <Select.Content>
        <Select.ScrollUpButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <__TamaguiNativeView style={{"zIndex":10,"position":"relative","flexDirection":"column"}}>
            <ChevronUp size={20} />
          </__TamaguiNativeView>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['background', 'transparent']}
          />
        </Select.ScrollUpButton>

        <Select.Viewport
          // to do animations:
          // transition="quick"
          // animateOnly={['transform', 'opacity']}
          // opacity="enter:0 exit:0"
          // y="enter:-10px exit:10px"
          minW={200}
        >
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(
              () =>
                items.map((item, i) => {
                  return (
                    <Select.Item
                      index={i}
                      key={item.name}
                      value={item.name.toLowerCase()}
                    >
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>
                  )
                }),
              [items]
            )}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && (
            <__TamaguiNativeView
              style={{"right":0,"top":0,"bottom":0,"flexDirection":"column","position":"absolute","alignItems":"center","justifyContent":"center","width":44,"pointerEvents":"none"}}







            >
              <ChevronDown size={getFontSize((props.size as FontSizeTokens) ?? true)} />
            </__TamaguiNativeView>
          )}
        </Select.Viewport>

        <Select.ScrollDownButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <__TamaguiNativeView style={{"zIndex":10,"position":"relative","flexDirection":"column"}}>
            <ChevronDown size={20} />
          </__TamaguiNativeView>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['transparent', 'background']}
          />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>
  )
}

const items = [
  { name: 'Apple' },
  { name: 'Pear' },
  { name: 'Blackberry' },
  { name: 'Peach' },
  { name: 'Apricot' },
  { name: 'Melon' },
  { name: 'Honeydew' },
  { name: 'Starfruit' },
  { name: 'Blueberry' },
  { name: 'Raspberry' },
  { name: 'Strawberry' },
  { name: 'Mango' },
  { name: 'Pineapple' },
  { name: 'Lime' },
  { name: 'Lemon' },
  { name: 'Coconut' },
  { name: 'Guava' },
  { name: 'Papaya' },
  { name: 'Orange' },
  { name: 'Grape' },
  { name: 'Jackfruit' },
  { name: 'Durian' },
]

export function HomeScreen({ pagesMode = false }: { pagesMode?: boolean }) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user'
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`,
  })

  return (
    <__TamaguiNativeView style={{"flex":1,"position":"relative","flexDirection":"column","justifyContent":"center","alignItems":"center","rowGap":46,"columnGap":46,"paddingTop":18,"paddingRight":18,"paddingBottom":18,"paddingLeft":18,"backgroundColor":"hsla(0, 0%, 2%, 1)"}}     >
      <XStack
        position="absolute sm:relative"
        width="100%"
        t="6 sm:0px"
        gap="6"
        justify="center"
        flexWrap="wrap"
      >
        {Platform.OS === 'web' && (
          <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>
        )}
      </XStack>

      <SelectDemo />

      <__TamaguiNativeView style={{"position":"relative","flexDirection":"row","rowGap":7,"columnGap":7}}>
        <Button
          size="3"
          iconAfter={
            <Button.Icon>
              <Activity />
            </Button.Icon>
          }
        >
          <Button.Text>Inverse</Button.Text>
        </Button>
      </__TamaguiNativeView>
      <__TamaguiNativeView style={{"position":"relative","flexDirection":"column","rowGap":18,"columnGap":18}}>
        <__TamaguiNativeText style={{"letterSpacing":-3,"fontSize":46,"lineHeight":56,"marginTop":0,"marginRight":0,"marginBottom":0,"marginLeft":0,"textTransform":"none","fontFamily":"InterBold","textAlign":"center","color":"hsla(0, 0%, 100%, 1)"}} >
          Welcome to Tamagui.
        </__TamaguiNativeText>
        <__TamaguiNativeText style={{"letterSpacing":0,"fontSize":15,"lineHeight":27,"fontFamily":"Inter","color":"hsla(0, 0%, 38%, 1)","textAlign":"center"}} >
          Here's a basic starter to show navigating from one screen to another.
        </__TamaguiNativeText>
        <__TamaguiNativeView style={{"flexShrink":0,"borderTopWidth":0,"borderRightWidth":0,"borderBottomWidth":1,"borderLeftWidth":0,"flex":1,"height":0,"maxHeight":0,"borderTopColor":"background-focus","borderRightColor":"background-focus","borderBottomColor":"background-focus","borderLeftColor":"background-focus","transform":[{"translateY":-0.5}],"borderStyle":"solid"}} />
        <__TamaguiNativeText style={{"letterSpacing":0,"fontSize":15,"lineHeight":27,"fontFamily":"Inter","color":"hsla(0, 0%, 100%, 1)","textAlign":"center"}}>
          This screen uses the same code on Next.js and React Native.
        </__TamaguiNativeText>
        <__TamaguiNativeView style={{"flexShrink":0,"borderTopWidth":0,"borderRightWidth":0,"borderBottomWidth":1,"borderLeftWidth":0,"flex":1,"height":0,"maxHeight":0,"borderTopColor":"background-focus","borderRightColor":"background-focus","borderBottomColor":"background-focus","borderLeftColor":"background-focus","transform":[{"translateY":-0.5}],"borderStyle":"solid"}} />
      </__TamaguiNativeView>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </__TamaguiNativeView>
  )
}

function SheetDemo() {
  const [open, setOpen] = useState(false)
  const [position, setPosition] = useState(0)

  return (
    <>
      <Button
        size="6"
        icon={open ? ChevronDown : ChevronUp}
        circular
        onPress={() => setOpen((x) => !x)}
      />
      <Sheet
        modal
        transition="medium"
        open={open}
        onOpenChange={setOpen}
        snapPoints={[80]}
        position={position}
        onPositionChange={setPosition}
        dismissOnSnapToBottom
      >
        <Sheet.Overlay bg="shadow4" transition="lazy" opacity="enter:0 exit:0" />
        <Sheet.Handle bg="color8" />
        <Sheet.Container items="center" justify="center" gap="10">
          <Sheet.Background bg="color2" />
          <__TamaguiNativeView style={{"position":"relative","flexDirection":"row","rowGap":7,"columnGap":7}}>
            <__TamaguiNativeText style={{"letterSpacing":0,"fontSize":15,"lineHeight":27,"fontFamily":"Inter","color":"hsla(0, 0%, 100%, 1)","textAlign":"center"}}>Made by</__TamaguiNativeText>
            <Anchor color="blue10" href="https://twitter.com/natebirdman" target="_blank">
              @natebirdman,
            </Anchor>
            <Anchor
              color="blue10"
              href="https://github.com/tamagui/tamagui"
              target="_blank"
              rel="noreferrer"
            >
              give it a ⭐️
            </Anchor>
          </__TamaguiNativeView>

          <Button
            size="6"
            circular
            icon={ChevronDown}
            onPress={() => {
              setOpen(false)
              toast('Sheet closed!', {
                description: 'Just showing how toast works...',
              })
            }}
          />
        </Sheet.Container>
      </Sheet>
    </>
  )
}

const __TamaguiNativeView = require('react-native').View;
const __TamaguiNativeText = require('react-native').Text;"
`;

exports[`Package.json exports support > should recognize imports from path-specific exports during optimization > web-optimized-single 1`] = `
"import "./_screen.css"
import {
  Adapt,
  Anchor,
  Button,
  type FontSizeTokens,
  getFontSize,
  H1,
  Label,
  Paragraph,
  Select,
  type SelectProps,
  Separator,
  Sheet,
  toast,
  XStack,
  YStack,
} from '@my/ui'
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton'
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton'
import { LinearGradient } from '@tamagui/linear-gradient'
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons-2'
import React, { useState } from 'react'
import { Platform } from 'react-native'
import { useLink } from 'solito/navigation'

export function SelectDemo() {
  return (
    <div className="is_View _p-1680456342 _fd-993307987 _rg-2005477931 _cg-1998450050">
      <div className="is_View _p-1680456342 _fd-903929222 _w-2049337802 _ai-984674592 _rg-2005477931 _cg-1998450050"  >
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </div>

      <div className="is_View _p-1680456342 _fd-903929222 _w-2049337802 _ai-984674592 _rg-2005477931 _cg-1998450050"  >
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </div>
    </div>
  )
}

export function SelectDemoItem(props: SelectProps & { trigger?: React.ReactNode }) {
  const [val, setVal] = React.useState('apple')

  return (
    <Select
      value={val}
      onValueChange={setVal}
      disablePreventBodyScroll
      zIndex={200000}
      {...props}
    >
      {props?.trigger || (
        <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>
      )}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Container>
            <Sheet.Background />
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Container>
          <Sheet.Overlay
            backgroundColor="shadow-color"
            transition="lazy"
            opacity="enter:0 exit:0"
          />
        </Sheet>
      </Adapt>

      <Select.Content>
        <Select.ScrollUpButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <div className="is_View _z-10 _p-1680456342 _fd-993307987">
            <ChevronUp size={20} />
          </div>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['background', 'transparent']}
          />
        </Select.ScrollUpButton>

        <Select.Viewport
          // to do animations:
          // transition="quick"
          // animateOnly={['transform', 'opacity']}
          // opacity="enter:0 exit:0"
          // y="enter:-10px exit:10px"
          minW={200}
        >
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(
              () =>
                items.map((item, i) => {
                  return (
                    <Select.Item
                      index={i}
                      key={item.name}
                      value={item.name.toLowerCase()}
                    >
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>
                  )
                }),
              [items]
            )}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && (
            <div
              className="is_View _r-0px _t-0px _b-0px _fd-993307987 _p-602101781 _ai-984674592 _jc-1451134762 _w-1658152644 _pe-2062402311"







            >
              <ChevronDown size={getFontSize((props.size as FontSizeTokens) ?? true)} />
            </div>
          )}
        </Select.Viewport>

        <Select.ScrollDownButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <div className="is_View _z-10 _p-1680456342 _fd-993307987">
            <ChevronDown size={20} />
          </div>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['transparent', 'background']}
          />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>
  )
}

const items = [
  { name: 'Apple' },
  { name: 'Pear' },
  { name: 'Blackberry' },
  { name: 'Peach' },
  { name: 'Apricot' },
  { name: 'Melon' },
  { name: 'Honeydew' },
  { name: 'Starfruit' },
  { name: 'Blueberry' },
  { name: 'Raspberry' },
  { name: 'Strawberry' },
  { name: 'Mango' },
  { name: 'Pineapple' },
  { name: 'Lime' },
  { name: 'Lemon' },
  { name: 'Coconut' },
  { name: 'Guava' },
  { name: 'Papaya' },
  { name: 'Orange' },
  { name: 'Grape' },
  { name: 'Jackfruit' },
  { name: 'Durian' },
]

export function HomeScreen({ pagesMode = false }: { pagesMode?: boolean }) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user'
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`,
  })

  return (
    <div className="is_View _grow-1 _shrink-1 _p-1680456342 _fd-993307987 _fb-1179007698 _jc-1451134762 _ai-984674592 _rg-2005477807 _cg-1998449926 _pt-2030555998 _pr-432028893 _pb-650479431 _pl-1712651667 _bc-760290994"     >
      <div
        className="is_View _fd-903929222 _p-2037968290 _w-2049337802 _t-1090455351 _rg-2005477869 _cg-1998449988 _jc-1451134762 _fw-1940163442"





      >
        {Platform.OS === 'web' && (
          <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>
        )}
      </div>

      <SelectDemo />

      <div className="is_View _p-1680456342 _fd-903929222 _rg-2005477993 _cg-1998450112">
        <Button
          size="3"
          iconAfter={
            <Button.Icon>
              <Activity />
            </Button.Icon>
          }
        >
          <Button.Text>Inverse</Button.Text>
        </Button>
      </div>
      <div className="is_View _p-1680456342 _fd-993307987 _rg-2005477931 _cg-1998450050">
        <h1 className="is_H1 is_Text font_heading _mt-0px _mr-0px _mb-0px _ml-0px _us-1779636624 _ws-16207184 _tt-1237313446 _ff-223068202 _fw-1587648533 _ls-212441533 _fs-1233374854 _lh-982341709 _ta-133869855 _c-1209323742" >
          Welcome to Tamagui.
        </h1>
        <p className="is_Paragraph is_Text font_body _us-1779636624 _ws-16207184 _ff-223068202 _fw-1449875753 _ls-668569891 _fs-1595970648 _lh-386115147 _c-1209323680 _ta-133869855" >
          Here's a basic starter to show navigating from one screen to another.
        </p>
        <div className="is_Separator is_View _shrink-1 _btw-0px _brw-0px _borderBottomWidth-1px _borderLeftWidth-0px _grow-1 _height-0px _maxH-0px _bbs-solid _bts-solid _bls-solid _brs-solid _fb-1179007698 _ty-1987489944 _t-1640849179 _btc-2003162210 _brc-1597429945 _bbc-1907786111 _blc-848959775" />
        <p className="is_Paragraph is_Text font_body _us-1779636624 _ws-16207184 _ff-223068202 _fw-1449875753 _ls-668569891 _fs-1595970648 _lh-386115147 _c-2138458847 _ta-133869855">
          This screen uses the same code on Next.js and React Native.
        </p>
        <div className="is_Separator is_View _shrink-1 _btw-0px _brw-0px _borderBottomWidth-1px _borderLeftWidth-0px _grow-1 _height-0px _maxH-0px _bbs-solid _bts-solid _bls-solid _brs-solid _fb-1179007698 _ty-1987489944 _t-1640849179 _btc-2003162210 _brc-1597429945 _bbc-1907786111 _blc-848959775" />
      </div>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </div>
  )
}

function SheetDemo() {
  const [open, setOpen] = useState(false)
  const [position, setPosition] = useState(0)

  return (
    <>
      <Button
        size="6"
        icon={open ? ChevronDown : ChevronUp}
        circular
        onPress={() => setOpen((x) => !x)}
      />
      <Sheet
        modal
        transition="medium"
        open={open}
        onOpenChange={setOpen}
        snapPoints={[80]}
        position={position}
        onPositionChange={setPosition}
        dismissOnSnapToBottom
      >
        <Sheet.Overlay bg="shadow4" transition="lazy" opacity="enter:0 exit:0" />
        <Sheet.Handle bg="color8" />
        <Sheet.Container items="center" justify="center" gap="10">
          <Sheet.Background bg="color2" />
          <div className="is_View _p-1680456342 _fd-903929222 _rg-2005477993 _cg-1998450112">
            <p className="is_Paragraph is_Text font_body _us-1779636624 _ws-16207184 _ff-223068202 _fw-1449875753 _ls-668569891 _fs-1595970648 _lh-386115147 _c-2138458847 _ta-133869855">Made by</p>
            <Anchor color="blue10" href="https://twitter.com/natebirdman" target="_blank">
              @natebirdman,
            </Anchor>
            <Anchor
              color="blue10"
              href="https://github.com/tamagui/tamagui"
              target="_blank"
              rel="noreferrer"
            >
              give it a ⭐️
            </Anchor>
          </div>

          <Button
            size="6"
            circular
            icon={ChevronDown}
            onPress={() => {
              setOpen(false)
              toast('Sheet closed!', {
                description: 'Just showing how toast works...',
              })
            }}
          />
        </Sheet.Container>
      </Sheet>
    </>
  )
}
"
`;
